# django-survey

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
src/survey/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
src/survey/migrations/: 0001_initial.py  0002_alter_survey_description_alter_survey_end_date_and_more.py
src/survey/templates/survey/: survey_detail.html
src/survey/templates/survey/widgets/: js.html  survey_chart.html  survey_detail.html  survey_header.html  survey_option.html
src/survey/templatetags/: survey.py
tests/app/: settings.py  urls.py  views.py
tests/app/templates/: index.html
