[build-system]
requires = ["setuptools >= 61.0", "wheel", "django"]
build-backend = "setuptools.build_meta"

[project]
name = "django-surveyplus"
version = "1.0.2"
authors = [
  { name = "Wilmer Martinez", email = "info@wilmermartinez.dev" }
]
description = "Django Survey App"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [# https://pypi.org/classifiers/

    # "Development Status :: 1 - Planning",
    # "Development Status :: 2 - Pre-Alpha",
    #"Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    # "Development Status :: 7 - Inactive",

    "Intended Audience :: Developers",

    "Topic :: Software Development :: Libraries :: Python Modules" ,

    "Environment :: Web Environment",

    "Natural Language :: English",
    "Natural Language :: Spanish",

    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.0",
    "Programming Language :: Python :: 3.1",
    "Programming Language :: Python :: 3.2",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    "Framework :: Django :: 3",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
]
dependencies = [
  "Django>=3",
  "Pillow",
]
keywords = [
  "django",
  "survey",
  "polls",
]

[project.urls]
Homepage = "https://github.com/wilmerm/django-survey"
Issues = "https://github.com/wilmerm/django-survey/issues"
Repository = "https://github.com/wilmerm/django-survey"